Add documentations for energy estimator, qubit mapper, and state preparation (#71)
* update usage examples of energy_estimator

* add documentations for qubit mapper and state preparation

* fix factory method in example python file

* add references

* update example files per review comments

---------

Co-authored-by: Rushi Gong <v-rushigong@microsoft.com>

--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -35,3 +35,54 @@
   doi={10.1140/epjb/e2018-90170-1},
   url={https://link.springer.com/article/10.1140/epjb/e2018-90170-1}
 }
+@article{Jordan-Wigner1928,
+  title={Über das Paulische Äquivalenzverbot},
+  author={Jordan, P. and Wigner, E.},
+  journal={Zeitschrift für Physik},
+  volume={47},
+  pages={631-651},
+  year={1928},
+  doi={10.1007/BF01331938},
+  url={https://doi.org/10.1007/BF01331938}
+}
+@article{Love2012,
+    author = {Seeley, Jacob T. and Richard, Martin J. and Love, Peter J.},
+    title = {The Bravyi-Kitaev transformation for quantum computation of electronic structure},
+    journal = {The Journal of Chemical Physics},
+    volume = {137},
+    number = {22},
+    pages = {224109},
+    year = {2012},
+    month = {12},
+    abstract = {Quantum simulation is an important application of future quantum computers with applications in quantum chemistry, condensed matter, and beyond. Quantum simulation of fermionic systems presents a specific challenge. The Jordan-Wigner transformation allows for representation of a fermionic operator by O(n) qubit operations. Here, we develop an alternative method of simulating fermions with qubits, first proposed by Bravyi and Kitaev [Ann. Phys. 298, 210 (2002)10.1006/aphy.2002.6254; e-print arXiv:quant-ph/0003137v2], that reduces the simulation cost to O(log n) qubit operations for one fermionic operation. We apply this new Bravyi-Kitaev transformation to the task of simulating quantum chemical Hamiltonians, and give a detailed example for the simplest possible case of molecular hydrogen in a minimal basis. We show that the quantum circuit for simulating a single Trotter time step of the Bravyi-Kitaev derived Hamiltonian for H2 requires fewer gate applications than the equivalent circuit derived from the Jordan-Wigner transformation. Since the scaling of the Bravyi-Kitaev method is asymptotically better than the Jordan-Wigner method, this result for molecular hydrogen in a minimal basis demonstrates the superior efficiency of the Bravyi-Kitaev method for all quantum computations of electronic structure.},
+    issn = {0021-9606},
+    doi = {10.1063/1.4768229},
+    url = {https://doi.org/10.1063/1.4768229},
+    eprint = {https://pubs.aip.org/aip/jcp/article-pdf/doi/10.1063/1.4768229/13999577/224109_1_online.pdf},
+}
+@article{Bravyi-Kitaev2002,
+title = {Fermionic Quantum Computation},
+journal = {Annals of Physics},
+volume = {298},
+number = {1},
+pages = {210-226},
+year = {2002},
+issn = {0003-4916},
+doi = {https://doi.org/10.1006/aphy.2002.6254},
+url = {https://www.sciencedirect.com/science/article/pii/S0003491602962548},
+author = {Sergey B. Bravyi and Alexei Yu. Kitaev},
+}
+@article{Christandl2016,
+  title = {Quantum circuits for isometries},
+  author = {Iten, Raban and Colbeck, Roger and Kukuljan, Ivan and Home, Jonathan and Christandl, Matthias},
+  journal = {Phys. Rev. A},
+  volume = {93},
+  issue = {3},
+  pages = {032318},
+  numpages = {19},
+  year = {2016},
+  month = {Mar},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevA.93.032318},
+  url = {https://link.aps.org/doi/10.1103/PhysRevA.93.032318}
+}
