--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -18,7 +18,7 @@
     volume={35},
     pages={457},
     year={1963},
-    doi={10.1103/RevModPhys.35.457},
+    doi={10.1103/RevModPhys.35.457}
 }
 @article{Boughton1993,
     title={Comparison of the {Boys} and {Pipek-Mezey} localizations in the local correlation approach and automatic virtual basis selection},
@@ -61,10 +61,8 @@
     doi={10.1080/00268970110103642}
 }
 @article{Williams-Young2023,
-    title={A parallel, distributed memory implementation of the adaptive
-           sampling configuration interaction method},
-    author={David B. Williams-Young and Norm M. Tubman and Carlos Mejuto-Zaera
-            and Wibe A. de Jong},
+    title={A parallel, distributed memory implementation of the adaptive sampling configuration interaction method},
+    author={David B. Williams-Young and Norm M. Tubman and Carlos Mejuto-Zaera and Wibe A. de Jong},
     journal={The Journal of Chemical Physics},
     volume={158},
     pages={214109},
@@ -73,114 +71,111 @@
     url={https://arxiv.org/abs/2303.05688}
 }
 @article{Malvetti2021,
-    title = {Quantum Circuits for Sparse Isometries},
-    author = {Emanuel Malvetti and Raban Iten and Roger Colbeck},
-    journal = {Quantum},
-    volume = {5},
-    pages = {412},
-    year = {2021},
-    doi = {10.22331/q-2021-06-21-412},
+    title={Quantum Circuits for Sparse Isometries},
+    author={Emanuel Malvetti and Raban Iten and Roger Colbeck},
+    journal={Quantum},
+    volume={5},
+    pages={412},
+    year={2021},
+    doi={10.22331/q-2021-06-21-412},
     url={http://arxiv.org/abs/2006.00016}
 }
 @article{Lehtola2018,
-    title = {Recent developments in libxc — A comprehensive library of functionals for density functional theory},
-    journal = {SoftwareX},
-    volume = {7},
-    pages = {1-5},
-    year = {2018},
-    issn = {2352-7110},
-    doi = {10.1016/j.softx.2017.11.002},
-    author = {Susi Lehtola and Conrad Steigemann and Micael J.T. Oliveira and Miguel A.L. Marques},
+    title={Recent developments in libxc — A comprehensive library of functionals for density functional theory},
+    author={Susi Lehtola and Conrad Steigemann and Micael J. T. Oliveira and Miguel A. L. Marques},
+    journal={SoftwareX},
+    volume={7},
+    pages={1-5},
+    year={2018},
+    issn={2352-7110},
+    doi={10.1016/j.softx.2017.11.002}
 }
 @article{Petrone2018,
-    author={Alessio Petrone and David B. Williams--Young and Shichao Sun and Torin F. Stetina and Xiaosong Li},
     title={An Efficient Implementation of Two-Component Relativistic Density Functional Theory with Torque-Free Auxiliary Variables},
+    author={Alessio Petrone and David B. Williams--Young and Shichao Sun and Torin F. Stetina and Xiaosong Li},
     journal={The European Physical Journal B},
     volume={91},
     number={169},
     pages={169},
     year={2018},
-    doi={10.1140/epjb/e2018-90170-1},
+    doi={10.1140/epjb/e2018-90170-1}
 }
 @article{Jordan-Wigner1928,
-    title={Über das Paulische Äquivalenzverbot},
-    author={Jordan, P. and Wigner, E.},
+    title={Über das {Paulische} {Äquivalenzverbot}},
+    author={P. Jordan and E. Wigner},
     journal={Zeitschrift für Physik},
     volume={47},
     pages={631-651},
     year={1928},
-    doi={10.1007/BF01331938},
+    doi={10.1007/BF01331938}
 }
 @article{Love2012,
-    author = {Seeley, Jacob T. and Richard, Martin J. and Love, Peter J.},
-    title = {The {Bravyi-Kitaev} transformation for quantum computation of electronic structure},
-    journal = {The Journal of Chemical Physics},
-    volume = {137},
-    number = {22},
-    pages = {224109},
-    year = {2012},
-    month = {12},
-    doi = {10.1063/1.4768229},
+    title={The {Bravyi-Kitaev} transformation for quantum computation of electronic structure},
+    author={Jacob T. Seeley and Martin J. Richard and Peter J. Love},
+    journal={The Journal of Chemical Physics},
+    volume={137},
+    number={22},
+    pages={224109},
+    year={2012},
+    doi={10.1063/1.4768229}
 }
 @article{Bravyi-Kitaev2002,
-    title = {Fermionic Quantum Computation},
-    journal = {Annals of Physics},
-    volume = {298},
-    number = {1},
-    pages = {210-226},
-    year = {2002},
-    issn = {0003-4916},
-    doi = {10.1006/aphy.2002.6254},
-    author = {Sergey B. Bravyi and Alexei Yu. Kitaev},
+    title={Fermionic Quantum Computation},
+    author={Sergey B. Bravyi and Alexei Yu. Kitaev},
+    journal={Annals of Physics},
+    volume={298},
+    number={1},
+    pages={210-226},
+    year={2002},
+    issn={0003-4916},
+    doi={10.1006/aphy.2002.6254}
 }
 @article{Christandl2016,
-    title = {Quantum circuits for isometries},
-    author = {Iten, Raban and Colbeck, Roger and Kukuljan, Ivan and Home, Jonathan and Christandl, Matthias},
-    journal = {Phys. Rev. A},
-    volume = {93},
-    issue = {3},
-    pages = {032318},
-    numpages = {19},
-    year = {2016},
-    month = {Mar},
-    publisher = {American Physical Society},
-    doi = {10.1103/PhysRevA.93.032318},
+    title={Quantum circuits for isometries},
+    author={Raban Iten and Roger Colbeck and Ivan Kukuljan and Jonathan Home and Matthias Christandl},
+    journal={Physical Review A},
+    volume={93},
+    issue={3},
+    pages={032318},
+    year={2016},
+    publisher={American Physical Society},
+    doi={10.1103/PhysRevA.93.032318}
 }
 @article{Kitaev1995,
     title={Quantum measurements and the {Abelian} Stabilizer Problem},
-    author={Kitaev, A.Y.},
+    author={A. Y. Kitaev},
     journal={arXiv},
     year={1995},
     url={https://arxiv.org/abs/quant-ph/9511026}
 }
 @article{Dobsicek2007,
     title={Arbitrary accuracy iterative quantum phase estimation algorithm using a single ancillary qubit: A two-qubit benchmark},
-    author={Dobsicek, M. and Johansson, G. and Shumeiko, V. and Wendin, G.},
-    journal={Phys. Rev. A},
+    author={M. Dobsicek and G. Johansson and V. Shumeiko and G. Wendin},
+    journal={Physical Review A},
     volume={76},
     pages={030306},
     year={2007},
-    doi={10.1103/PhysRevA.76.030306},
+    doi={10.1103/PhysRevA.76.030306}
 }
 @inbook{Nielsen-Chuang2010-QPE,
     booktitle={Quantum Computation and Quantum Information},
     title={The quantum {Fourier} transform and its applications},
-    author={Nielsen, Michael A. and Chuang, Isaac L.},
+    author={Michael A. Nielsen and Isaac L. Chuang},
     year={2010},
     publisher={Cambridge University Press},
     address={Cambridge, UK},
     isbn={978-0-521-63503-0},
-    doi={10.1017/CBO9780511976667},
-    chapter={5.2}
+    chapter={5.2},
+    doi={10.1017/CBO9780511976667}
 }
 @article{Liu1989,
     title={On the limited memory {BFGS} method for large scale optimization},
-    author={Liu, Dong C. and Nocedal, Jorge},
+    author={Dong C. Liu and Jorge Nocedal},
     journal={Mathematical Programming},
     volume={45},
     pages={503-528},
     year={1989},
-    doi={10.1007/BF01589116},
+    doi={10.1007/BF01589116}
 }
 @article{Tiesinga2021,
     title={{CODATA} Recommended Values of the Fundamental Physical Constants: 2018},
@@ -201,40 +196,40 @@
 }
 % GauXC relativistic integrals
 @article{kovtun2024relativistic,
-    author = {Kovtun, Mikael and Lambros, Eleftherios and Liu, Aodong and Tang, Diandong and Williams--Young, David B. and Li, Xiaosong},
-    title = {Accelerating Relativistic Exact-Two-Component Density Functional Theory Calculations with Graphical Processing Units},
-    journal = {Journal of Chemical Theory and Computation},
-    volume = {20},
-    number = {18},
-    pages = {7694--7699},
-    year = {2024},
-    doi = {10.1021/acs.jctc.4c00843},
+    title={Accelerating Relativistic Exact-Two-Component Density Functional Theory Calculations with Graphical Processing Units},
+    author={Mikael Kovtun and Eleftherios Lambros and Aodong Liu and Diandong Tang and David B. Williams--Young and Xiaosong Li},
+    journal={Journal of Chemical Theory and Computation},
+    volume={20},
+    number={18},
+    pages={7694--7699},
+    year={2024},
+    doi={10.1021/acs.jctc.4c00843}
 }
 % GauXC distributed Memory Seminumerical Exact Exchange implementation
 @article{williams2023distributed,
-    title = {Distributed memory, GPU accelerated Fock construction for hybrid, Gaussian basis density functional theory},
-    author = {Williams--Young, David B. and Asadchev, Andrey and Popovici, Doru Thom and Clark, David and Waldrop, Jonathan and Windus, Theresa L. and Valeev, Edward F. and de Jong, Wibe A.},
-    journal = {The Journal of Chemical Physics},
-    volume = {158},
-    number = {23},
-    pages = {234104},
-    year = {2023},
-    doi = {10.1063/5.0151070},
+    title={Distributed memory, {GPU} accelerated Fock construction for hybrid, {Gaussian} basis density functional theory},
+    author={David B. Williams--Young and Andrey Asadchev and Doru Thom Popovici and David Clark and Jonathan Waldrop and Theresa L. Windus and Edward F. Valeev and Wibe A. {de Jong}},
+    journal={The Journal of Chemical Physics},
+    volume={158},
+    number={23},
+    pages={234104},
+    year={2023},
+    doi={10.1063/5.0151070}
 }
 % GauXC performance Portability (HIP/SYCL implementations)
 @article{williams2021achieving,
-    title={Achieving performance portability in Gaussian basis set density functional theory on accelerator based architectures in NWChemEx},
-    author={Williams--Young, David B and Bagusetty, Abhishek and de Jong, Wibe A and Doerfler, Douglas and van Dam, Hubertus JJ and V{\'a}zquez-Mayagoitia, {\'A}lvaro and Windus, Theresa L and Yang, Chao},
+    title={Achieving performance portability in {Gaussian} basis set density functional theory on accelerator based architectures in {NWChemEx}},
+    author={David B. Williams--Young and Abhishek Bagusetty and Wibe A. {de Jong} and Douglas Doerfler and Hubertus J. J. {van Dam} and {\'A}lvaro V{\'a}zquez-Mayagoitia and Theresa L. Windus and Chao Yang},
     journal={Parallel Computing},
     volume={108},
     pages={102829},
     year={2021},
-    doi={10.1016/j.parco.2021.102829},
+    doi={10.1016/j.parco.2021.102829}
 }
 % GauXC CUDA and distributed memory implementation
 @article{williams20on,
-    author={David B. Williams--Young and Wibe A. de Jong and Hubertus J.J. van Dam and Chao Yang},
     title={On the Efficient Evaluation of the Exchange Correlation Potential on Graphics Processing Unit Clusters},
+    author={David B. Williams--Young and Wibe A. {de Jong} and Hubertus J. J. {van Dam} and Chao Yang},
     journal={Frontiers in Chemistry},
     volume={8},
     pages={581058},
@@ -244,11 +239,11 @@
 }
 % GauXC algorithm for XC potential assembly and shared-memory CPU implementation
 @misc{Libint2,
-  author={E.~F.~Valeev},
-  title={Libint: A library for the evaluation of molecular integrals of many-body operators over Gaussian functions},
-  howpublished={http://libint.valeyev.net/},
-  note={version 2.11.2},
-  year={2025},
+    title={Libint: A library for the evaluation of molecular integrals of many-body operators over {Gaussian} functions},
+    author={E. F. Valeev},
+    howpublished={http://libint.valeyev.net/},
+    note={version 2.11.2},
+    year={2025}
 }
 @article{Stein2019,
     title={{autoCAS}: A Program for Fully Automated Multiconfigurational Calculations},
@@ -261,13 +256,63 @@
     doi={10.1002/jcc.25869},
     url={https://arxiv.org/abs/1904.00097}
 }
+@article{Mohr2016,
+    title={{CODATA} recommended values of the fundamental physical constants: 2014},
+    author={Peter J. Mohr and David B. Newell and Barry N. Taylor},
+    journal={Reviews of Modern Physics},
+    volume={88},
+    pages={035009},
+    year={2016},
+    doi={10.1103/RevModPhys.88.035009},
+    url={https://physics.nist.gov/cuu/pdf/CODATA_RMP2016.pdf}
+}
 @article{Mohr2025,
-    title={{CODATA} Recommended Values of the Fundamental Physical Constants: 2022},
+    title={{CODATA} recommended values of the fundamental physical constants: 2022},
     author={Peter J. Mohr and David B. Newell and Barry N. Taylor},
     journal={Reviews of Modern Physics},
     volume={97},
     pages={025002},
     year={2025},
     doi={10.1103/RevModPhys.97.025002},
-    url={https://tsapps.nist.gov/publication/get_pdf.cfm?pub_id=958143},
+    url={https://tsapps.nist.gov/publication/get_pdf.cfm?pub_id=958143}
+}
+@article{Prohaska2022,
+    title={Standard atomic weights of the elements 2021 ({IUPAC} Technical Report)},
+    author={Thomas Prohaska and Johanna Irrgeher and Jacqueline Benefield and John K. Böhlke and Lesley A. Chesson and Tyler B. Coplen and Tiping Ding and Philip J. H. Dunn and Manfred Gröning and Norman E. Holden and Harro A. J. Meijer and Heiko Moossen and Antonio Possolo and Yoshio Takahashi and Jochen Vogl and Thomas Walczyk and Jun Wang and Michael E. Wieser and Shigekazu Yoneda and Xiang-Kun Zhu and Juris Meija},
+    journal={Pure and Applied Chemistry},
+    volume={94},
+    pages={573-600},
+    year={2022},
+    doi={10.1515/pac-2019-0603},
+    url={https://doi.org/10.1515/pac-2019-0603}
+}
+@article{Kondev2021,
+    title={The {NUBASE2020} evaluation of nuclear physics properties},
+    author={F. G. Kondev and M. Wang and W. J. Huang and S. Naimi and G. Audi},
+    journal={Chinese Physics C},
+    volume={45},
+    pages={030001},
+    year={2021},
+    doi={10.1088/1674-1137/abddae},
+    url={https://doi.org/10.1088/1674-1137/abddae}
+}
+@article{Huang2021,
+    title={The {AME} 2020 atomic mass evaluation {(I)}. {Evaluation} of input data, and adjustment procedures},
+    author={W. J. Huang and Meng Wang and F. G. Kondev and G. Audi and S. Naimi},
+    journal={Chinese Physics C},
+    volume={45},
+    pages={030002},
+    year={2021},
+    doi={10.1088/1674-1137/abddb0},
+    url={https://doi.org/10.1088/1674-1137/abddb0}
+}
+@article{Wang2021,
+    title={The {AME} 2020 atomic mass evaluation {(II)}. {Tables}, graphs and references},
+    author={Meng Wang and W. J. Huang and F. G. Kondev and G. Audi and S. Naimi},
+    journal={Chinese Physics C},
+    volume={45},
+    pages={030003},
+    year={2021},
+    doi={10.1088/1674-1137/abddaf},
+    url={https://doi.org/10.1088/1674-1137/abddaf}
 }
