Flexible basis sets and initial guess (#224)

--- a/examples/state_prep_energy.ipynb
+++ b/examples/state_prep_energy.ipynb
@@ -85,8 +85,8 @@
                 "from qdk_chemistry.algorithms import create\n",
                 "\n",
                 "# Perform an SCF calculation, returning the energy and wavefunction\n",
-                "scf_solver = create(\"scf_solver\", basis_set=\"cc-pvdz\")\n",
-                "E_hf, wfn_hf = scf_solver.run(structure, charge=0, spin_multiplicity=1)\n",
+                "scf_solver = create(\"scf_solver\")\n",
+                "E_hf, wfn_hf = scf_solver.run(structure, charge=0, spin_multiplicity=1, basis_information=\"cc-pvdz\")\n",
                 "print(f\"SCF energy is {E_hf:.3f} Hartree\")\n",
                 "\n",
                 "# Display a summary of the molecular orbitals obtained from the SCF calculation\n",
