Consistent Capitalization in references.bib (#246)

--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -52,7 +52,7 @@
     url={https://arxiv.org/abs/2303.05688}
 }
 @article{Malvetti2021,
-    title={Quantum Circuits for Sparse Isometries},
+    title={Quantum circuits for sparse isometries},
     author={Emanuel Malvetti and Raban Iten and Roger Colbeck},
     journal={Quantum},
     volume={5},
@@ -62,7 +62,7 @@
     url={http://arxiv.org/abs/2006.00016}
 }
 @article{Lehtola2018,
-    title={Recent developments in libxc — A comprehensive library of functionals for density functional theory},
+    title={Recent developments in {Libxc} — A comprehensive library of functionals for density functional theory},
     author={Susi Lehtola and Conrad Steigemann and Micael J. T. Oliveira and Miguel A. L. Marques},
     journal={SoftwareX},
     volume={7},
@@ -72,7 +72,7 @@
     doi={10.1016/j.softx.2017.11.002}
 }
 @article{Petrone2018,
-    title={An Efficient Implementation of Two-Component Relativistic Density Functional Theory with Torque-Free Auxiliary Variables},
+    title={An efficient implementation of two-component relativistic density functional theory with torque-free auxiliary variables},
     author={Alessio Petrone and David B. Williams--Young and Shichao Sun and Torin F. Stetina and Xiaosong Li},
     journal={The European Physical Journal B},
     volume={91},
@@ -101,7 +101,7 @@
     doi={10.1063/1.4768229}
 }
 @article{Bravyi-Kitaev2002,
-    title={Fermionic Quantum Computation},
+    title={Fermionic quantum computation},
     author={Sergey B. Bravyi and Alexei Yu. Kitaev},
     journal={Annals of Physics},
     volume={298},
@@ -123,7 +123,7 @@
     doi={10.1103/PhysRevA.93.032318}
 }
 @article{Kitaev1995,
-    title={Quantum measurements and the {Abelian} Stabilizer Problem},
+    title={Quantum measurements and the {Abelian} stabilizer problem},
     author={A. Y. Kitaev},
     journal={arXiv},
     year={1995},
@@ -159,7 +159,7 @@
     doi={10.1007/BF01589116}
 }
 @article{Tiesinga2021,
-    title={{CODATA} Recommended Values of the Fundamental Physical Constants: 2018},
+    title={{CODATA} recommended values of the fundamental physical constants: 2018},
     author={Eite Tiesinga and Peter J. Mohr and David B. Newell and Barry N. Taylor},
     journal={Journal of Physical and Chemical Reference Data},
     volume={50},
@@ -177,7 +177,7 @@
 }
 % GauXC relativistic integrals
 @article{kovtun2024relativistic,
-    title={Accelerating Relativistic Exact-Two-Component Density Functional Theory Calculations with Graphical Processing Units},
+    title={Accelerating relativistic exact-two-component density functional theory calculations with graphical processing units},
     author={Mikael Kovtun and Eleftherios Lambros and Aodong Liu and Diandong Tang and David B. Williams--Young and Xiaosong Li},
     journal={Journal of Chemical Theory and Computation},
     volume={20},
@@ -188,7 +188,7 @@
 }
 % GauXC distributed Memory Seminumerical Exact Exchange implementation
 @article{williams2023distributed,
-    title={Distributed memory, {GPU} accelerated Fock construction for hybrid, {Gaussian} basis density functional theory},
+    title={Distributed memory, {GPU} accelerated {Fock} construction for hybrid, {Gaussian} basis density functional theory},
     author={David B. Williams--Young and Andrey Asadchev and Doru Thom Popovici and David Clark and Jonathan Waldrop and Theresa L. Windus and Edward F. Valeev and Wibe A. {de Jong}},
     journal={The Journal of Chemical Physics},
     volume={158},
@@ -199,7 +199,7 @@
 }
 % GauXC performance Portability (HIP/SYCL implementations)
 @article{williams2021achieving,
-    title={Achieving performance portability in {Gaussian} basis set density functional theory on accelerator based architectures in {NWChemEx}},
+    title={Achieving performance portability in {Gaussian} basis set density functional theory on accelerator-based architectures in {NWChemEx}},
     author={David B. Williams--Young and Abhishek Bagusetty and Wibe A. {de Jong} and Douglas Doerfler and Hubertus J. J. {van Dam} and {\'A}lvaro V{\'a}zquez-Mayagoitia and Theresa L. Windus and Chao Yang},
     journal={Parallel Computing},
     volume={108},
@@ -209,7 +209,7 @@
 }
 % GauXC CUDA and distributed memory implementation
 @article{williams20on,
-    title={On the Efficient Evaluation of the Exchange Correlation Potential on Graphics Processing Unit Clusters},
+    title={On the efficient evaluation of the exchange correlation potential on graphics processing unit clusters},
     author={David B. Williams--Young and Wibe A. {de Jong} and Hubertus J. J. {van Dam} and Chao Yang},
     journal={Frontiers in Chemistry},
     volume={8},
@@ -220,14 +220,14 @@
 }
 % GauXC algorithm for XC potential assembly and shared-memory CPU implementation
 @misc{Libint2,
-    title={Libint: A library for the evaluation of molecular integrals of many-body operators over {Gaussian} functions},
+    title={{Libint}: A library for the evaluation of molecular integrals of many-body operators over {Gaussian} functions},
     author={E. F. Valeev},
     howpublished={http://libint.valeyev.net/},
     note={version 2.11.2},
     year={2025}
 }
 @article{Stein2019,
-    title={{autoCAS}: A Program for Fully Automated Multiconfigurational Calculations},
+    title={{autoCAS}: A program for fully automated multiconfigurational calculations},
     author={Christopher J. Stein and Markus Reiher},
     journal={Journal of Computational Chemistry},
     volume={40},
@@ -258,7 +258,7 @@
     url={https://tsapps.nist.gov/publication/get_pdf.cfm?pub_id=958143}
 }
 @article{Prohaska2022,
-    title={Standard atomic weights of the elements 2021 ({IUPAC} Technical Report)},
+    title={Standard atomic weights of the elements 2021 ({IUPAC} technical report)},
     author={Thomas Prohaska and Johanna Irrgeher and Jacqueline Benefield and John K. Böhlke and Lesley A. Chesson and Tyler B. Coplen and Tiping Ding and Philip J. H. Dunn and Manfred Gröning and Norman E. Holden and Harro A. J. Meijer and Heiko Moossen and Antonio Possolo and Yoshio Takahashi and Jochen Vogl and Thomas Walczyk and Jun Wang and Michael E. Wieser and Shigekazu Yoneda and Xiang-Kun Zhu and Juris Meija},
     journal={Pure and Applied Chemistry},
     volume={94},
@@ -278,7 +278,7 @@
     url={https://doi.org/10.1088/1674-1137/abddae}
 }
 @article{Huang2021,
-    title={The {AME} 2020 atomic mass evaluation {(I)}. {Evaluation} of input data, and adjustment procedures},
+    title={The {AME} 2020 atomic mass evaluation {(I)}. Evaluation of input data, and adjustment procedures},
     author={W. J. Huang and Meng Wang and F. G. Kondev and G. Audi and S. Naimi},
     journal={Chinese Physics C},
     volume={45},
@@ -288,7 +288,7 @@
     url={https://doi.org/10.1088/1674-1137/abddb0}
 }
 @article{Wang2021,
-    title={The {AME} 2020 atomic mass evaluation {(II)}. {Tables}, graphs and references},
+    title={The {AME} 2020 atomic mass evaluation {(II)}. Tables, graphs and references},
     author={Meng Wang and W. J. Huang and F. G. Kondev and G. Audi and S. Naimi},
     journal={Chinese Physics C},
     volume={45},
@@ -311,7 +311,7 @@
 @Inbook{Schlegel1991,
     author={Schlegel, H. B. and McDouall, J. J. W.},
     editor={{\"O}gretir, Cemil and Csizmadia, Imre G.},
-    title={Do You Have SCF Stability and Convergence Problems?},
+    title={Do you have {SCF} stability and convergence problems?},
     bookTitle={Computational Advances in Organic Chemistry: Molecular Structure and Reactivity},
     year={1991},
     publisher={Springer Netherlands},
@@ -322,7 +322,7 @@
     url={https://doi.org/10.1007/978-94-011-3262-6_2}
 }
 @article{Lowdin1956,
-  title = {Natural Orbitals in the Quantum Theory of Two-Electron Systems},
+  title = {Natural orbitals in the quantum theory of two-electron systems},
   author = {L\"owdin, Per-Olov and Shull, Harrison},
   journal = {Physical Review},
   volume = {101},
@@ -349,7 +349,7 @@
     url = {https://doi.org/10.1063/1.456588}
 }
 @article{Edmiston1963,
-  title = {Localized Atomic and Molecular Orbitals},
+  title = {Localized atomic and molecular orbitals},
   author = {Edmiston, Clyde and Ruedenberg, Klaus},
   journal = {Rev. Mod. Phys.},
   volume = {35},
@@ -363,7 +363,7 @@
   url = {https://link.aps.org/doi/10.1103/RevModPhys.35.457}
 }
 @article{Foster1960,
-  title = {Canonical Configurational Interaction Procedure},
+  title = {Canonical configurational interaction procedure},
   author = {Foster, J. M. and Boys, S. F.},
   journal = {Rev. Mod. Phys.},
   volume = {32},
@@ -378,7 +378,7 @@
 }
 @article{Lehtola2013,
     author = {Lehtola, Susi and Jónsson, Hannes},
-    title = {Unitary Optimization of Localized Molecular Orbitals},
+    title = {Unitary optimization of localized molecular orbitals},
     journal = {Journal of Chemical Theory and Computation},
     volume = {9},
     number = {12},
@@ -403,7 +403,7 @@
 
 @article{Wang2025,
     author = {Wang, Zhenling and Ikeda, Kevin and Shen, Hengyuan and Loipersberger, Matthias and Zech, Alexander and Aldossary, Abdulrahman and Head-Gordon, Teresa and Head-Gordon, Martin},
-    title = {Second-Generation Energy Decomposition Analysis of Intermolecular Interaction Energies from the Second-Order Mo̷ller–Plesset Theory: An Extensible, Orthogonal Formulation with Useful Basis Set Convergence for All Terms},
+    title = {Second-generation energy decomposition analysis of intermolecular interaction energies from the second-order {Mo̷ller--Plesset} theory: An extensible, orthogonal formulation with useful basis set convergence for all terms},
     journal = {Journal of Chemical Theory and Computation},
     volume = {21},
     number = {3},
@@ -414,7 +414,7 @@
 }
 @article{Tubman2016,
     author = {Tubman, Norm M. and Lee, Joonho and Takeshita, Tyler Y. and Head-Gordon, Martin and Whaley, K. Birgitta},
-    title = {A deterministic alternative to the full configuration interaction quantum Monte Carlo method},
+    title = {A deterministic alternative to the full configuration interaction quantum {Monte Carlo} method},
     journal = {The Journal of Chemical Physics},
     volume = {145},
     number = {4},
@@ -426,7 +426,7 @@
 }
 @article{Tubman2020,
     author = {Tubman, Norm M. and Freeman, C. Daniel and Levine, Daniel S. and Hait, Diptarka and Head-Gordon, Martin and Whaley, K. Birgitta},
-    title = {Modern Approaches to Exact Diagonalization and Selected Configuration Interaction with the Adaptive Sampling CI Method},
+    title = {Modern approaches to exact diagonalization and selected configuration interaction with the adaptive sampling {CI} method},
     journal = {Journal of Chemical Theory and Computation},
     volume = {16},
     number = {4},
@@ -437,14 +437,14 @@
 }
 @Misc{Libint2_290,
   author = "E.~F.~Valeev",
-  title = "Libint: A library for the evaluation of molecular integrals of many-body operators over Gaussian functions",
+  title = "{Libint}: A library for the evaluation of molecular integrals of many-body operators over {Gaussian} functions",
   howpublished = "http://libint.valeyev.net/",
   note = "version 2.9.0",
   year =         2024
 }
 @article{Pritchard2019,
     author = {Pritchard, Benjamin P. and Altarawy, Doaa and Didier, Brett and Gibson, Tara D. and Windus, Theresa L.},
-    title = {New Basis Set Exchange: An Open, Up-to-Date Resource for the Molecular Sciences Community},
+    title = {New {Basis Set Exchange}: An open, up-to-date resource for the molecular sciences community},
     journal = {Journal of Chemical Information and Modeling},
     volume = {59},
     number = {11},
@@ -466,7 +466,7 @@
 }
 @article{Schuchardt2007,
     author = {Schuchardt, Karen L. and Didier, Brett T. and Elsethagen, Todd and Sun, Lisong and Gurumoorthi, Vidhya and Chase, Jared and Li, Jun and Windus, Theresa L.},
-    title = {Basis Set Exchange:  A Community Database for Computational Sciences},
+    title = {{Basis Set Exchange}: A community database for computational sciences},
     journal = {Journal of Chemical Information and Modeling},
     volume = {47},
     number = {3},
@@ -483,7 +483,7 @@
     month = {aug},
     number = {7},
     pages = {074108},
-    title = {{Prescreening and efficiency in the evaluation of integrals over ab initio effective core potentials}},
+    title = {Prescreening and efficiency in the evaluation of integrals over ab initio effective core potentials},
     url = {http://aip.scitation.org/doi/10.1063/1.4986887},
     volume = {147},
     year = {2017}
@@ -495,14 +495,14 @@
     publisher = {The Open Journal},
     number = {60},
     pages = {3039},
-    title = {libecpint: A C++ library for the efficient evaluation of integrals over effective core potentials},
+    title = {{libecpint}: A {C++} library for the efficient evaluation of integrals over effective core potentials},
     url = {https://doi.org/10.21105/joss.03039},
     volume = {6},
     year = {2021}
 }
 @article{Pulay1982,
     author = {Pulay, P.},
-    title = {Improved SCF convergence acceleration},
+    title = {Improved {SCF} convergence acceleration},
     journal = {Journal of Computational Chemistry},
     volume = {3},
     number = {4},
