Fix spelling errors in codebase (#254)

--- a/examples/state_prep_energy.ipynb
+++ b/examples/state_prep_energy.ipynb
@@ -352,7 +352,7 @@
                 "Rather than requiring thousands of fine rotations, this optimized approach requires only a single fine rotation for the two-determinant benzene diradical wavefunction—demonstrating the power of chemistry-informed optimizations for quantum state preparation.\n",
                 "\n",
                 "Close inspection of the generated circuit shows that it has also reduced our qubit count:  several of the qubits have been converted to classical bits, which can be post-processed after measurement.\n",
-                "We will revist these classical bits in the next section on energy measurement."
+                "We will revisit these classical bits in the next section on energy measurement."
             ]
         },
         {
