Reorganize examples into new directory setups (#312)
Co-authored-by: David Williams-Young <davidwillia@microsoft.com>
Co-authored-by: Jan Unsleber <18538155+nabbelbabbel@users.noreply.github.com>

--- a/examples/qpe_stretched_n2.ipynb
+++ b/examples/qpe_stretched_n2.ipynb
@@ -272,7 +272,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils import prepare_2_dets_trial_state\n",
+    "from utils.qpe_utils import prepare_2_dets_trial_state\n",
     "\n",
     "wfn_trial, fidelity = prepare_2_dets_trial_state(wfn_cas)\n",
     "print(f\"Overlap of trial state with CASCI wavefunction: {fidelity:.2%}\")\n",
@@ -429,7 +429,7 @@
    "outputs": [],
    "source": [
     "from collections import Counter\n",
-    "from utils import run_iqpe\n",
+    "from utils.qpe_utils import run_iqpe\n",
     "\n",
     "M_PRECISION = 6\n",
     "T_TIME = 0.1\n",
@@ -475,7 +475,7 @@
     "from pathlib import Path\n",
     "from collections import Counter\n",
     "from qdk_chemistry.data import QpeResult\n",
-    "from utils import run_iqpe\n",
+    "from utils.qpe_utils import run_iqpe\n",
     "\n",
     "M_PRECISION = 10\n",
     "T_TIME = 0.1\n",
