Move get_top_determinants, fix citations originating in cpp docs and fix QubitHamiltonian serialization (#318)
Co-authored-by: Jan Unsleber <janunsleber@microsoft.com>

--- a/examples/qpe_stretched_n2.ipynb
+++ b/examples/qpe_stretched_n2.ipynb
@@ -240,12 +240,11 @@
    "source": [
     "import numpy as np\n",
     "from qdk.widgets import Histogram\n",
-    "from qdk_chemistry.utils.wavefunction import get_top_determinants\n",
     "\n",
     "# Plot top determinant weights from the CASCI wavefunction\n",
     "print(f\"Total determinants in the CASCI wavefunction:  {len(wfn_cas.get_active_determinants())}\")\n",
     "print(\"Plotting the determinants by weight.\")\n",
-    "top_configurations = get_top_determinants(wfn_cas)\n",
+    "top_configurations = wfn_cas.get_top_determinants()\n",
     "display(\n",
     "    Histogram(\n",
     "        bar_values={k.to_string(): np.abs(v)**2 for k, v in top_configurations.items()}, \n",
@@ -277,7 +276,7 @@
     "wfn_trial, fidelity = prepare_2_dets_trial_state(wfn_cas)\n",
     "print(f\"Overlap of trial state with CASCI wavefunction: {fidelity:.2%}\")\n",
     "\n",
-    "configurations = get_top_determinants(wfn_trial)\n",
+    "configurations = wfn_trial.get_top_determinants()\n",
     "display(Histogram(bar_values={k.to_string(): np.abs(v)**2 for k, v in configurations.items()}, sort=\"high-to-low\",))"
    ]
   },
