--- a/examples/state_prep_energy.ipynb
+++ b/examples/state_prep_energy.ipynb
@@ -235,13 +235,11 @@
                 "import numpy as np\n",
                 "from qdk.widgets import Histogram\n",
                 "\n",
-                "from qdk_chemistry.utils.wavefunction import get_top_determinants\n",
-                "\n",
                 "# Plot top determinant weights from the CASCI wavefunction\n",
                 "NUM_DETERMINANTS = 10\n",
                 "print(f\"Total determinants in the CASCI wavefunction:  {len(wfn_cas.get_active_determinants())}\")\n",
                 "print(f\"Plotting the top {NUM_DETERMINANTS} determinants by weight.\")\n",
-                "top_configurations = get_top_determinants(wfn_cas, max_determinants=NUM_DETERMINANTS)\n",
+                "top_configurations = wfn_cas.get_top_determinants(max_determinants=NUM_DETERMINANTS)\n",
                 "display(Histogram(bar_values={k.to_string(): np.abs(v)**2 for k, v in top_configurations.items()},))"
             ]
         },
@@ -264,7 +262,7 @@
             "outputs": [],
             "source": [
                 "# Get top 2 determinants from the CASCI wavefunction to form a sparse wavefunction\n",
-                "top_configurations = get_top_determinants(wfn_cas, max_determinants=2)\n",
+                "top_configurations = wfn_cas.get_top_determinants(max_determinants=2)\n",
                 "\n",
                 "# Compute the reference energy of the sparse wavefunction\n",
                 "pmc_calculator = create(\"projected_multi_configuration_calculator\")\n",
@@ -489,7 +487,7 @@
     ],
     "metadata": {
         "kernelspec": {
-            "display_name": "qdk-chemistry (3.12.3)",
+            "display_name": "qdk_chemistry_venv",
             "language": "python",
             "name": "python3"
         },
