Style 'AutoCAS' as 'autoCAS' in user-facing text (#334)

--- a/examples/qpe_stretched_n2.ipynb
+++ b/examples/qpe_stretched_n2.ipynb
@@ -139,7 +139,7 @@
             "id": "c1bd22f0",
             "metadata": {},
             "source": [
-                "### Optimizing active space with AutoCAS-EOS active space selection"
+                "### Optimizing active space with autoCAS-EOS active space selection"
             ]
         },
         {
@@ -152,7 +152,7 @@
                 "autocas = create(\"active_space_selector\", \"qdk_autocas_eos\")\n",
                 "autocas_wfn = autocas.run(wfn)\n",
                 "indices, _ = autocas_wfn.get_orbitals().get_active_space_indices()\n",
-                "print(f\"AutoCAS-EOS active space: {len(indices)} orbitals, indices={list(indices)}\")"
+                "print(f\"autoCAS-EOS active space: {len(indices)} orbitals, indices={list(indices)}\")"
             ]
         },
         {
@@ -160,7 +160,7 @@
             "id": "93144fd9",
             "metadata": {},
             "source": [
-                "### Building Hamiltonian for the AutoCAS selected active space and calculate CASCI energy"
+                "### Building Hamiltonian for the autoCAS selected active space and calculate CASCI energy"
             ]
         },
         {
