--- a/examples/state_prep_energy.ipynb
+++ b/examples/state_prep_energy.ipynb
@@ -298,7 +298,7 @@
                 "from qdk.widgets import Circuit\n",
                 "\n",
                 "# Generate state preparation circuit for the sparse state using the regular isometry method (Qiskit)\n",
-                "state_prep = create(\"state_prep\", \"regular_isometry\")\n",
+                "state_prep = create(\"state_prep\", \"qiskit_regular_isometry\")\n",
                 "regular_isometry_circuit = state_prep.run(wfn_sparse)\n",
                 "\n",
                 "# Visualize the regular isometry circuit\n",
