--- a/examples/qpe_stretched_n2.ipynb
+++ b/examples/qpe_stretched_n2.ipynb
@@ -300,7 +300,7 @@
                 "from qdk.widgets import Circuit\n",
                 "\n",
                 "# Generate state preparation circuit for the sparse state using the regular isometry method (Qiskit)\n",
-                "state_prep = create(\"state_prep\", \"regular_isometry\")\n",
+                "state_prep = create(\"state_prep\", \"qiskit_regular_isometry\")\n",
                 "regular_isometry_circuit = state_prep.run(wfn_trial)\n",
                 "\n",
                 "# Visualize the regular isometry circuit\n",
@@ -396,7 +396,7 @@
                 "from qdk.openqasm import circuit\n",
                 "\n",
                 "M_PRECISION = 6  # number of phase bits of precision\n",
-                "T_TIME = 0.7  # evolution time\n",
+                "T_TIME = 0.205  # evolution time\n",
                 "evolution_builder = create(\"time_evolution_builder\", \"trotter\")\n",
                 "circuit_mapper = create(\"controlled_evolution_circuit_mapper\", \"pauli_sequence\")\n",
                 "iqpe = create(\"phase_estimation\", \"iterative\", num_bits=M_PRECISION, evolution_time=T_TIME)\n",
@@ -429,7 +429,7 @@
             "outputs": [],
             "source": [
                 "M_PRECISION = 6\n",
-                "T_TIME = 0.7\n",
+                "T_TIME = 0.205\n",
                 "NUM_TRIALS = 1\n",
                 "SHOTS_PER_ITERATION = 3\n",
                 "SIMULATOR_SEED = 42\n",
@@ -445,9 +445,8 @@
                 "\n",
                 "print(f\"QPE Results of {M_PRECISION} bit precision:\")\n",
                 "print(f\"Reference CASCI energy: {e_cas:.6f} Hartree\")\n",
-                "resolved_energy = min(list(result.branching), key=lambda energy: abs(energy + active_hamiltonian.get_core_energy() - e_cas))\n",
-                "print(f\"Total energy from phase estimation: {resolved_energy + active_hamiltonian.get_core_energy():.6f} Hartree\")\n",
-                "print(f\"Energy difference with CASCI energy: {abs(resolved_energy + active_hamiltonian.get_core_energy() - e_cas):.3e} Hartree\")"
+                "print(f\"Total energy from phase estimation: {result.raw_energy + active_hamiltonian.get_core_energy():.6f} Hartree\")\n",
+                "print(f\"Energy difference with CASCI energy: {abs(result.raw_energy + active_hamiltonian.get_core_energy() - e_cas):.3e} Hartree\")"
             ]
         },
         {
@@ -471,8 +470,8 @@
                 "from qdk_chemistry.data import QpeResult\n",
                 "from qdk_chemistry.utils import Logger\n",
                 "\n",
-                "M_PRECISION = 10\n",
-                "T_TIME = 0.7\n",
+                "M_PRECISION = 6\n",
+                "T_TIME = 0.205\n",
                 "NUM_TRIALS = 30\n",
                 "SHOTS_PER_ITERATION = 3\n",
                 "SIMULATOR_SEED = 42\n",
@@ -505,7 +504,7 @@
                 "    results_loaded.append(result)\n",
                 "    \n",
                 "# Use the majority energy as the estimate\n",
-                "estimated_energy, _ = Counter([min(list(result.branching), key=lambda energy: abs(energy + active_hamiltonian.get_core_energy() - e_cas)) for result in results_loaded]).most_common(1)[0]\n",
+                "estimated_energy, _ = Counter([result.raw_energy  for result in results_loaded]).most_common(1)[0]\n",
                 "\n",
                 "print(f\"QPE Results of {M_PRECISION} bit precision from {NUM_TRIALS} trials:\")\n",
                 "print(f\"Reference CASCI energy: {e_cas:.6f} Hartree\")\n",
@@ -515,7 +514,7 @@
                 "print(\"Energy difference (Hartree) distribution:\")\n",
                 "display(\n",
                 "    Histogram(\n",
-                "        bar_values={f\"{abs(k+active_hamiltonian.get_core_energy()-e_cas):.3e}\": v for k, v in Counter([min(list(result.branching), key=lambda energy: abs(energy + active_hamiltonian.get_core_energy() - e_cas)) for result in results_loaded]).items()}, \n",
+                "        bar_values={f\"{abs(k+active_hamiltonian.get_core_energy()-e_cas):.3e}\": v for k, v in Counter([result.raw_energy for result in results_loaded]).items()}, \n",
                 "        sort=\"high-to-low\"\n",
                 "        )\n",
                 "    )"
